--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
 
 :root {
-    --bg-color: #000d1f;
-    --primary-color: #f1f5ff;
+    --bg-color: #060131;
+    --primary-color: #b941ff;
     --secondary-color: #ff7300;
     --font: "Nunito Sans", sans-serif;
 }
@@ -48,6 +48,10 @@ nav a:hover {
 
 .graficos-container {
     margin: 5rem;
+}
+
+.grafico {
+    margin-top: 3rem;
 }
 
 .graficos-container__texto {
